force-app/main/default/objects/Patient_Treatment__c/Patient_Treatment__c.object-meta.xml
<CustomObject>
    <label>Patient Treatment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Patient Treatment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Treatment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>